--- a/package.json
+++ b/package.json
@@ -2,15 +2,10 @@
   "name": "situs-slot-gacor-via-ovo-5rb",
   "main": "./gundol/atom/92422/situs-slot-gacor-via-ovo-5rb",
   "version": "1.69.1",
-  "description": "Link Alternatif Slot Online Depo ovo 5rb 5000 Tanpa Potongan",
+  "description": "October 2022 Calendar",
   "keywords": [
-    "Slot Online Deposit ovo 5000",
-    "Slot Online Deposit depo ovo 10000",
-    "Situs Slot Online Deposit ovo",
-    "Slot Online Deposit ovo",
-    "Slot Online depo ovo 5ribu",
-    "Slot Online Deposit ovo Tanpa Potongan",
-    "Slot Online Deposit ovo Mudah Menang"
+    "October 2022 Calendar",
+    "October Calendar"
   ],
   "activationCommands": {
     "atom-workspace": "judi-slot-online-depo-ovo-tanpa-potongan:toggle"
